--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 	
 	
 	<!-- Custom JS and css -->
-	<link rel="stylesheet" href="css/pgGetMobileRates.css?ts=20160109191919" />
+	<link rel="stylesheet" href="css/pgGetMobileRates.css?ts=20160117191920" />
 	<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 	
 	<!-- <link rel='stylesheet' type='text/css' href='css/rupee.css'></link> -->
-	<script src="./js/pgGetMobileRates.js?ts=20151118151515"></script>
+	<script src="./js/pgGetMobileRates.js?ts=20160117191920"></script>
 
 	
 </head> 
@@ -57,7 +57,7 @@
 		
 		<div class="ui-grid-a cl_div_grid_wrapper" id="id_div_grid_wrapper">
 				<!-- Default it to No Steaming -->
-				<!-- <div class='cl_stream_off' > <span style='color:#E35E1B'>oops!!! </span>  No Data Connection... </div> -->
+				<div class='cl_stream_off' > <span style='color:#ffff66'>oops!!! &nbsp;&nbsp;&nbsp;</span>No Data Connection... </div>
 			
 				<div class="ui-grid-b cl_div_grid_comex" id="id_div_grid_comex">
 					
@@ -130,7 +130,7 @@
 						Gold <span class="cl_td_symbol_label3">(TCS)</span>
 					</div>	
 					<!-- <div class='ui-block-b cl_td_symbol_data cl_div_symbol_g999t'  style="display:none;"> <span id="id_span_data_symbol_g999t_bid"></span></div>		-->
-					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_g999t'>
+					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_g999t cl_div_bk_sym_g999t_ask'>
 						<img src="images/flag_ind.png" /> &nbsp;
 						<span class="cl_span_rate_data_ask" id="id_span_data_symbol_g999t_ask"></span>
 					</div>
@@ -139,7 +139,7 @@
 						Gold FT <span class="cl_td_symbol_label3">(RTGS)</span>
 					</div>	
 					<!-- <div class='ui-block-b cl_td_symbol_data cl_div_symbol_gft999r'  style="display:none;"> <span id="id_span_data_symbol_gft999r_bid"></span></div>		-->
-					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_gft999r'>
+					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_gft999r  cl_div_bk_sym_gft999r_ask'>
 						<img src="images/flag_ind.png" /> &nbsp;
 						<span class="cl_span_rate_data_ask" id="id_span_data_symbol_gft999r_ask"></span>
 					</div>
@@ -148,7 +148,7 @@
 						Gold FT <span class="cl_td_symbol_label3">(TCS)</span>
 					</div>	
 					<!-- <div class='ui-block-b cl_td_symbol_data cl_div_symbol_gft999t'  style="display:none;"> <span id="id_span_data_symbol_gft999t_bid"></span></div>		-->
-					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_gft999t'>
+					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_gft999t cl_div_bk_sym_gft999t_ask'>
 						<img src="images/flag_ind.png" /> &nbsp;
 						<span class="cl_span_rate_data_ask" id="id_span_data_symbol_gft999t_ask"></span>
 					</div>
@@ -157,7 +157,7 @@
 						Silver <span class="cl_td_symbol_label3">(RTGS)</span>
 					</div>	
 					<!-- <div class='ui-block-b cl_td_symbol_data cl_div_symbol_s999r'  style="display:none;"> <span id="id_span_data_symbol_s999r_bid"></span></div>		-->
-					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_s999r'>
+					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_s999r cl_div_bk_sym_s999r_ask'>
 						<img src="images/flag_ind.png" />  &nbsp;&nbsp;&nbsp;&nbsp;
 						<span class="cl_span_rate_data_ask" id="id_span_data_symbol_s999r_ask"></span>
 					</div>
@@ -166,7 +166,7 @@
 						Silver <span class="cl_td_symbol_label3">(TCS)</span>
 					</div>	
 					<!-- <div class='ui-block-b cl_td_symbol_data cl_div_symbol_s999t'  style="display:none;">  <span id="id_span_data_symbol_s999t_bid"></span></div>		-->
-					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_s999t'>
+					<div class='ui-block-b cl_td_symbol_data cl_div_symbol_s999t cl_div_bk_sym_s999t_ask'>
 						<img src="images/flag_ind.png" /> &nbsp;&nbsp;&nbsp;&nbsp;
 						<span class="cl_span_rate_data_ask" id="id_span_data_symbol_s999t_ask"></span>
 					</div>
